# big-brother-agent

./: .release-please-config.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  architecture.md
.claude/commands/: lint-and-pr.md
.github/workflows/: ci.yml  release-please.yml
docs/: agent.md
specs/: SPEC-agent.md
src/: collector.rs  config.rs  lib.rs  main.rs  models.rs  sender.rs  service.rs
