[package]
name = "inventory-agent"
version = "0.1.0"
edition = "2021"
description = "Windows Service agent for endpoint inventory collection"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
windows-service = "0.7"
wmi = "0.13"
serde_repr = "0.1"
get_if_addrs = "0.5"
log = "0.4"
simplelog = "0.12"

[dev-dependencies]
mockito = "1"
serial_test = "3"
